--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -1,62 +1,62 @@
 
 {{define "base"}}
 
-<!doctype html> <!--how the web page should run this html-->
-<html lang="en">
-	<head>
-		<!-- Required meta tags -->
-    	<meta charset="utf-8"> <!--can accept other character-->
-    	<meta name="viewport" content="width=device-width, initial-scale=1"> <!--don't scale and shrink tomatch other device-->
+	<!doctype html> <!--how the web page should run this html-->
+	<html lang="en">
+		<head>
+			<!-- Required meta tags -->
+				<meta charset="utf-8"> <!--can accept other character-->
+				<meta name="viewport" content="width=device-width, initial-scale=1"> <!--don't scale and shrink tomatch other device-->
+			
+			<title>My nice page</title>
+			
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/css/datepicker-bs4.min.css">
+			<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+			<link rel="stylesheet" type="text/css" href="/static/css/styles.css"> <!--need a slash in the front since we're hitting this from our web server. So it needs to know that the static folder should be found at the root of the application-->
+
+		</head>
+
+		<body>
+
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#">Navbar</a>
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+							<li class="nav-item">
+								<a class="nav-link active" aria-current="page" href="/">Home</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/about">About</a>
+							</li>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+									Rooms
+								</a>
+								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+									<li><a class="dropdown-item" href="/generals-quarters">General's Quarters</a></li>
+									<li><a class="dropdown-item" href="/majors-suite">Major's Suite</a></li>
+								</ul>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/search-availability" tabindex="-1" aria-disabled="true">Book Now</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/contact" tabindex="-1" aria-disabled="true">Contact</a>
+							</li>
+						</ul>
+						
+					</div>
+				</div>
+			</nav>
 		
-		<title>My nice page</title>
-		
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/css/datepicker-bs4.min.css">
-		<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-		<link rel="stylesheet" type="text/css" href="/static/css/styles.css"> <!--need a slash in the front since we're hitting this from our web server. So it needs to know that the static folder should be found at the root of the application-->
-
-	</head>
-
-	<body>
-
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		  <div class="container-fluid">
-		    <a class="navbar-brand" href="#">Navbar</a>
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="/">Home</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="/about">About</a>
-		        </li>
-		        <li class="nav-item dropdown">
-		          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		            Rooms
-		          </a>
-		          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-		            <li><a class="dropdown-item" href="/generals-quarters">General's Quarters</a></li>
-		            <li><a class="dropdown-item" href="/majors-suite">Major's Suite</a></li>
-		       		</ul>
-		        </li>
-		        <li class="nav-item">
-		        	<a class="nav-link" href="/search-availability" tabindex="-1" aria-disabled="true">Book Now</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="/contact" tabindex="-1" aria-disabled="true">Contact</a>
-		        </li>
-		      </ul>
-		      
-		    </div>
-		  </div>
-		</nav>
-  
-    {{block "content" .}}
-      
-    {{end}}
+			{{block "content" .}}
+				
+			{{end}}
 
 
 			<div class="row my-footer">
@@ -142,6 +142,21 @@
 						confirmButtonText: confirmButtonText
 					})
 				}
+
+				// display error message when the user comes to the page, using Notie
+				// try visiting "/reservation-summary" directly without making the reservation to see the result
+				{{with .Error}} //if you have some values in Error that's not empty
+					notify("{{.}}", "error")
+				{{end}}
+
+				// if success
+				{{with .Flash}} 
+					notify("{{.}}", "success")
+				{{end}}
+
+				{{with .Warning}} 
+					notify("{{.}}", "warning")
+				{{end}}
 
 				// SweetAlert2
 				// javascript module - avoid hard codes, edit in one place, and change everywhere
