--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -73,27 +73,51 @@
 				<div class="col">
 
 					<h1>Make reservation</h1>
+					<p><strong>Reservation Details</strong></p>
 
-					<form method="post" action="" class="needs-validation" novalidate>
-						
-						<div class="form-group mt-5">
+					<!-- pass the data as a variable ($res) to the template within the same block "container" -->
+					{{$res := index .Data "reservation"}} <!--store empty reservation the first time this page is displayed-->
+
+					<form method="post" action="/make-reservation" class="" novalidate>
+						<input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+						<div class="form-group mt-3">
 							<label for="first_name">First name:</label>
-							<input type="text" name="first_name" id="first_name" class="form-control" required autocomplete="off"></input>
+							{{with .Form.Errors.Get "first_name"}}
+								<!-- display value from the escaping function (with) -->
+								<label class="text-danger">{{.}}</label>
+							{{end}}
+							<!-- if the there is no input, put the red frame on with "is-invalid" -->
+							<input class="form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}"
+								id="first_name" autocomplete="off" type="text" 
+								name="first_name" value="{{$res.FirstName}}" required >
+								<!-- prevent the filled input from losing after reloading the page with "value" -->
 						</div>
 
 						<div class="form-group">
 							<label for="last_name">Last name:</label>
-							<input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off"></input>
+							{{with .Form.Errors.Get "last_name"}}
+								<label class="text-danger">{{.}}</label>
+							{{end}}
+							<input class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" id="last_name" autocomplete="off" type="text"   
+								name="last_name" value="{{$res.LastName}}" required>
 						</div>
 
 						<div class="form-group">
 							<label for="email">Email:</label>
-							<input type="email" name="email" id="email" class="form-control" class="form-control" required autocomplete="off"></input>
+							{{with .Form.Errors.Get "email"}}
+								<label class="text-danger">{{.}}</label>
+							{{end}}
+							<input class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}" id="email" autocomplete="off" type="email"
+								name="email" value="{{$res.Email}}" required>
 						</div>
 
 						<div class="form-group">
 							<label for="phone">Phone:</label>
-							<input type="phone" name="phone" id="phone" class="form-control" required autocomplete="off"></input>
+							{{with .Form.Errors.Get "phone"}}
+								<label class="text-danger">{{.}}</label>
+							{{end}}
+							<input class="form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}" id="phone" autocomplete="off" type="phone" 
+								name="phone" value="{{$res.Phone}}" required>
 						</div>
 
 						<hr>
