--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -23,9 +23,9 @@
 				max-width: 50%; /*50% of the available space*/
 			}
 
-			p{
+			/* p{
 
-			}
+			} */
 		</style>
 
 	</head>
@@ -80,6 +80,7 @@
 
 					<form method="post" action="/make-reservation" class="" novalidate>
 						<input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
 						<div class="form-group mt-3">
 							<label for="first_name">First name:</label>
 							{{with .Form.Errors.Get "first_name"}}
@@ -101,6 +102,18 @@
 							<input class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" id="last_name" autocomplete="off" type="text"   
 								name="last_name" value="{{$res.LastName}}" required>
 						</div>
+
+						<div class="form-group">
+							<label for="start_date">Start Date</label>
+							<input type="text" name="start_date" id="start_date" class="form-control">
+						</div>
+
+						<div class="form-group">
+							<label for="end_date">End Date</label>
+							<input type="text" name="end_date" id="end_date" class="form-control">
+						</div>
+
+						<input type="hidden" name="room_id" value="1">
 
 						<div class="form-group">
 							<label for="email">Email:</label>
