--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -72,14 +72,24 @@
 			<div class="row">
 				<div class="col">
 
-					<h1>Make reservation</h1>
-					<p><strong>Reservation Details</strong></p>
-
 					<!-- pass the data as a variable ($res) to the template within the same block "container" -->
 					{{$res := index .Data "reservation"}} <!--store empty reservation the first time this page is displayed-->
 
-					<form method="post" action="/make-reservation" class="" novalidate>
+					<h1>Make reservation</h1>
+
+					<p><strong>Reservation Details</strong><br>
+					Room: {{$res.Room.RoomName}}<br>
+					Arrival: {{index .StringMap "start_date"}}<br>
+					Departure: {{index .StringMap "end_date"}}
+					</p>
+
+					<form action="/make-reservation" method="post"  class="" novalidate>
 						<input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+						<input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+						<input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+
+						<input type="hidden" name="room_id" value="{{$res.RoomID}}"> 
 
 						<div class="form-group mt-3">
 							<label for="first_name">First name:</label>
@@ -103,7 +113,7 @@
 								name="last_name" value="{{$res.LastName}}" required>
 						</div>
 
-						<div class="form-group">
+						<!-- <div class="form-group">
 							<label for="start_date">Start Date</label>
 							<input type="text" name="start_date" id="start_date" class="form-control">
 						</div>
@@ -111,9 +121,9 @@
 						<div class="form-group">
 							<label for="end_date">End Date</label>
 							<input type="text" name="end_date" id="end_date" class="form-control">
-						</div>
+						</div> -->
 
-						<input type="hidden" name="room_id" value="1">
+						<!-- <input type="hidden" name="room_id" value="1">  --> <!--hard code-->
 
 						<div class="form-group">
 							<label for="email">Email:</label>
