--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -110,11 +110,33 @@
               console.log(data.ok) // refer to the elemenet stored in the data object
               console.log(data.message)
               */
-             if (data.ok) {
-               console.log("room is available")
-             } else {
-               console.log("room is not available")
-             }
+              if (data.ok) {
+                // console.log("room is available")
+                
+                // call sweetAlert pop-up "custom" modal
+                attention.custom({
+                  icon: 'success',
+                  showConfirmButton: false,
+                  msg: '<p>Room is available!</p>'
+                    // + '<p><a href="#!" class="btn btn-primary">' // use hashbang #! to do nothing
+                    + '<p><a href="/book-room?id='
+                    + data.room_id
+                    + '&s=' // use & for the next parameter
+                    + data.start_date
+                    + '&e='
+                    + data.end_date
+                    + '" class="btn btn-primary">'
+                    + 'Book now!</a></p>',
+                    // send values via url and let the handler takes them
+                })
+              } else {
+                // console.log("room is not available")
+
+                // call sweetAlert pop-up "error" modal
+                attention.error({
+                  msg: "No availability!",
+                })
+              }
             })
         }
       }); 
