Create app.js and copy script from base.layout

--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -84,7 +84,8 @@
 			<script src="https://unpkg.com/notie"></script>
 			<!-- SweetAlert2 -->
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
+			<script src="/static/js/app.js"></script>
+			
 			<!-- put js in js section -->
 			{{block "js" .}}
 
@@ -289,7 +290,6 @@
 						custom: custom,
 					}
 				}
-
 
 			</script>
 
