--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -19,6 +19,11 @@
     <link rel="shortcut icon" href="/static/admin/images/favicon.png" />
 
     <!-- customize the stylesheet for a given admin page -->
+    <style>
+      .content-wrapper {
+        background: white;
+      }
+    </style>
     {{block "css" .}}
 
     {{end}}
@@ -75,7 +80,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/admin/reservation-calendar"> <!-- use calendar to manage rooms -->
+              <a class="nav-link" href="/admin/reservations-calendar"> <!-- use calendar to manage rooms -->
                 <i class="ti-layout-list-post menu-icon"></i>
                 <span class="menu-title">Reservation Calendar</span>
               </a>
