--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -23,6 +23,9 @@
       .content-wrapper {
         background: white;
       }
+      label {
+        font-weight: bold;
+      }
     </style>
     {{block "css" .}}
 
