--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -99,7 +99,7 @@
 							<input class="form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}"
 								id="first_name" autocomplete="off" type="text" 
 								name="first_name" value="{{$res.FirstName}}" required >
-								<!-- prevent the filled input from losing after reloading the page with "value" -->
+								<!-- value="{{$res.FirstName}}" prevent the filled input from losing after reloading the page with "value" -->
 						</div>
 
 						<div class="form-group">
@@ -107,7 +107,8 @@
 							{{with .Form.Errors.Get "last_name"}}
 								<label class="text-danger">{{.}}</label>
 							{{end}}
-							<input class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" id="last_name" autocomplete="off" type="text"   
+							<input class="form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" 
+								id="last_name" autocomplete="off" type="text"   
 								name="last_name" value="{{$res.LastName}}" required>
 						</div>
 
