Update the template admin-reservation-calendar with date table that pulls all rooms from postgres

--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -30,6 +30,9 @@
         .notie-container{
           z-index: 50000;
         }
+        .footer{
+          background: white;
+        }
       </style>
       {{block "css" .}}
 
