--- a/templates/admin-reservations-show.page.tmpl
+++ b/templates/admin-reservations-show.page.tmpl
@@ -58,9 +58,17 @@
       </div>
 
       <hr>
-      <input type="submit" class="btn btn-primary" value="save">	
-      <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
-      <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">Mark as Processed</a>
+      <div class="float-left">
+        <input type="submit" class="btn btn-primary" value="save">	
+        <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+        <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">Mark as Processed</a>
+      </div>
+      
+      <div class="float-right">
+        <a href="#!" class="btn btn-danger" onclick="deleteRes({{$res.ID}})">Delete</a>
+      </div>
+      <!-- it's essential and practical to use clearfix - it helps div span correctly -->
+      <div class="clearfix"></div>     
 
     </form>
 
@@ -82,6 +90,18 @@
           }
         }
       })
-    }    
+    }
+    
+    function deleteRes(id) {
+      attention.custom({
+        icon: 'warning',
+        msg: 'Are you sure?',
+        callback: function(result) { 
+          if (result !== false) { 
+            window.location.href = "/admin/delete-reservation/{{$src}}/" + id;
+          }
+        }
+      })
+    }
   </script>
 {{end}}
