Update the calendar page for adding blocks with post form and deleting them

--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -31,52 +31,66 @@
 
     <div class="clearfix"></div>
 
-    {{range $rooms}}
-      {{$roomID := .ID}}
-      {{$blocks := index $.Data (printf "block_map_%d" .ID)}} <!-- ***use "$"" with "".Data" to refer it outside of the "range" -->
-      {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}} 
+    <form method="post" action="/admin/reservations-calendar">
+      <!-- we need CSRf when we use "post" -->
+      <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+      <input type="hidden" name="m" value="{{index .StringMap "this_month"}}">
+      <input type="hidden" name="y" value="{{index .StringMap "this_month_year"}}">
 
-      <h4 class="mt-4">{{.RoomName}}</h4>
+      {{range $rooms}}
+        {{$roomID := .ID}}
+        {{$blocks := index $.Data (printf "block_map_%d" .ID)}} <!-- ***use "$"" with "".Data" to refer it outside of the "range" -->
+        {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}} 
 
-      <div class="table-response">
-        <table class="table table-bordered table-sm">
-          
-          <tr class="table-dark">
-            {{range $index := iterate $dim}}
-              <td class="text-center">
-                {{add $index 1}}
-              </td>
-            {{end}}
-          </tr>
+        <h4 class="mt-4">{{.RoomName}}</h4>
 
-          <tr>
-            {{range $index := iterate $dim}} <!--index or day starting from 0-->
-              <td class="text-center">
-                {{if gt (index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0 }}
-                  <!-- link to our related reservation -->
-                  <a href="/admin/reservations/cal/{{index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}">
-                    <span class="text-danger">R</span>
-                  </a>
-                {{else}}
-                  <!-- check if there is a erservation in the blocks map -->
-                  <!-- check if block ID is greater than 0, remove -->
-                  <input          
-                    {{if gt (index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0 }}
-                      checked
-                      name="remove_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
-                      value="{{index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}"
-                    {{else}}
-                      name="add_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
-                    {{end}}
-                  type="checkbox">
-                {{end}}
-              </td>
-            {{end}}
-          </tr>
+        <div class="table-response">
+          <table class="table table-bordered table-sm">
+            
+            <tr class="table-dark">
+              <!-- Display the dates in a row -->
+              {{range $index := iterate $dim}} <!-- $index (day) starting from 0, so nedd toadd 1 later -->
+                <td class="text-center">
+                  {{add $index 1}}
+                </td>
+              {{end}}
+            </tr>
 
-        </table>
-      </div>
-    {{end}}
+            <tr>
+              {{range $index := iterate $dim}} <!--index or day starting from 0-->
+                <td class="text-center">
+                  {{if gt (index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0 }}
+                    <!-- link to our related reservation -->
+                    <a href="/admin/reservations/cal/{{index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}">
+                      <span class="text-danger">R</span>
+                    </a>
+                  {{else}}
+                    <!-- check if there is a reservation in the blocks map -->
+                    <!-- check if block ID is greater than 0 then checked mark, otherwise remove -->
+                    <!-- give a value even in add_block_XXX or it won't actually get submitted to the form with any meaningful value (just give it anything greater than zero: 1) -->
+                    <!-- Ex. If you mark a checkbox it will pass the variable "name" that is "add_block_XXX" with the value "1" -->
+                    <input          
+                      {{if gt (index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0 }}
+                        checked
+                        name="remove_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
+                        value="{{index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}"
+                      {{else}}
+                        name="add_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}" 
+                        value="1"
+                      {{end}}
+                    type="checkbox">
+                  {{end}}
+                </td>
+              {{end}}
+            </tr>
+          </table>
+        </div>
+      {{end}}
 
+      <hr>
+
+      <input type="submit" class="btn btn-primary" value="Save Changes">
+
+    </form>
   </div>
 {{end}}
