Update and correct "Save changes", "mark as processed", and "delete" on the reservation show page, including insertion and deletion of reservations to/from the database.

--- a/templates/admin-reservations-show.page.tmpl
+++ b/templates/admin-reservations-show.page.tmpl
@@ -16,6 +16,8 @@
 
     <form action="/admin/reservations/{{$src}}/{{$res.ID}}" method="post"  class="" novalidate>
       <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+      <input type="hidden" name="year" value="{{index .StringMap "year"}}"> <!-- year & month are now part of the post request -->
+      <input type="hidden" name="month" value={{index .StringMap "month"}}>
 
       <div class="form-group mt-3">
         <label for="first_name">First name:</label>
@@ -67,7 +69,9 @@
         {{else}}
           <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
         {{end}}
-        <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">Mark as Processed</a>
+        {{if eq $res.Processed 0}} <!--add the if statement to remove the butoon after processed-->
+          <a href="#!" class="btn btn-info" onclick="processRes({{$res.ID}})">Mark as Processed</a>
+        {{end}}
       </div>
       
       <div class="float-right">
@@ -92,7 +96,9 @@
         // callback runs when someone click a button
         callback: function(result) { // result from the click on the "Are you sure?" modal
           if (result !== false) { // check if it's not the cancel button (on the "Are you sure?" modal)
-            window.location.href = "/admin/process-reservation/{{$src}}/" + id;
+            window.location.href = "/admin/process-reservation/{{$src}}/" 
+              + id
+              + "/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
           }
         }
       })
@@ -104,7 +110,9 @@
         msg: 'Are you sure?',
         callback: function(result) { 
           if (result !== false) { 
-            window.location.href = "/admin/delete-reservation/{{$src}}/" + id;
+            window.location.href = "/admin/delete-reservation/{{$src}}/"
+              + id
+              + "/do?y={{index .StringMap "year"}}&m={{index .StringMap "month"}}";
           }
         }
       })
