--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -8,12 +8,18 @@
 			<meta charset="utf-8"> <!--can accept other character-->
 			<meta name="viewport" content="width=device-width, initial-scale=1"> <!--don't scale and shrink tomatch other device-->
 			
-			<title>My nice page</title>
+			<title>Fort Smythe Bed and Breakfast</title>
 			
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+			<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/css/datepicker-bs4.min.css">
 			<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
 			<link rel="stylesheet" type="text/css" href="/static/css/styles.css"> <!--need a slash in the front since we're hitting this from our web server. So it needs to know that the static folder should be found at the root of the application-->
+			
+			<!-- faster - don't have to reload my external style sheet every time -->
+			<style>
+				
+			</style>
 
 		</head>
 
@@ -21,7 +27,7 @@
 
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="#">Navbar</a>
+					<a class="navbar-brand" href="#">&nbsp;</a> <!--non breaking space-->
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
@@ -69,31 +75,39 @@
 					</div>
 				</div>
 			</nav>
-		
+
+					
 			{{block "content" .}}
 				
 			{{end}}
 
 
-			<div class="row my-footer">
-
-				<div class="col">
-					Left
+			<footer class="row my-footer">
+				<div class="row">
+					<div class="col text-center">
+						<strong>Fort Smythe Bed &amp; Breakfast</strong><br>
+						100 Rocky Road<br>
+						Northbrook, Ontario<br>
+						Canada<br>
+						(416) 555-1212<br>
+						<a href="mailto:info@fsbb.ca">info@fsbb.ca</a>
+					</div>
+	
+					<div class="col">
+						
+					</div>
+	
+					<div class="col text-center">
+						<strong>Your home away<br>from home</strong>
+					</div>
 				</div>
 
-				<div class="col">
-					Middle
-				</div>
-
-				<div class="col">
-					Right
-				</div>
-
-			</div>
+			</footer>
 			
 			<!-- Bootstrap -->
 			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+			<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script> -->
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 			<!-- Vanilla JS -->
 			<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.2/dist/js/datepicker-full.min.js"></script>
 			<!-- notie -->
